Integrate Google OAuth 2.0 to allow users to create .txt files and upload them to a Google Drive folder named 'DriveNotes'

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.drive_notes">
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:label="drive_notes"
         android:name="${applicationName}"
@@ -17,9 +18,9 @@
                  while the Flutter UI initializes. After that, this theme continues
                  to determine the Window background behind the Flutter UI. -->
             <meta-data
-              android:name="io.flutter.embedding.android.NormalTheme"
-              android:resource="@style/NormalTheme"
-              />
+                android:name="com.google.android.gms.auth.api.signin.v2.defaultWebClientId"
+                android:value="588903646891-37tdk7msob45nubpmrf9kjobtge78ch4.apps.googleusercontent.com"/>
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
