--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_riverpod: ^2.6.1
+  dio: ^5.8.0+1
+  flutter_secure_storage: ^9.2.4
+  url_launcher: ^6.3.1
+  googleapis_auth: ^2.0.0
+  googleapis: ^14.0.0
+  google_sign_in: ^6.3.0
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -58,8 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
