--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   googleapis: ^14.0.0
   google_sign_in: ^6.3.0
   http: ^1.3.0
+  go_router: ^15.0.0
 
 dev_dependencies:
   flutter_test:
