--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,11 @@ dependencies:
   google_sign_in: ^6.3.0
   http: ^1.3.0
   go_router: ^15.0.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
+  json_serializable: ^6.9.5
+  build_runner: ^2.4.15
   flutter_test:
     sdk: flutter
 
