--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,15 @@ dependencies:
   http: ^1.3.0
   go_router: ^15.0.0
   json_annotation: ^4.9.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
+  connectivity_plus: ^6.1.3
 
 dev_dependencies:
-  json_serializable: ^6.9.5
+  json_serializable: ^6.0.0
   build_runner: ^2.4.15
+  hive_generator: ^2.0.1
   flutter_test:
     sdk: flutter
 
