--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
   connectivity_plus: ^6.1.3
+  mocktail: ^1.0.4
 
 dev_dependencies:
   json_serializable: ^6.0.0
